[package]
name = "backoff-config"
version = "0.1.2"
edition = "2024"
authors = ["Daniyil Yevtyushkin <d.yevtyushkin.dev@gmail.com>"]
description = "Flexible backoff configuration in Rust"
license = "MIT"
repository = "https://github.com/yevtyushkin/backoff-config"
homepage = "https://github.com/yevtyushkin/backoff-config"
documentation = "https://docs.rs/backoff-config"
readme = "README.md"
categories = ["config"]
keywords = ["backoff", "retry", "configuration", "serde", "backon"]
exclude = ["examples/*", "tests/*", "*.md"]

[dependencies]
backon = { version = "1.5.2", default-features = false, features = ["std"] }
duration-str = { version = "0.17.0", default-features = false, features = ["no_calc", "serde"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
smart-default = "0.7.1"

[dev-dependencies]
anyhow = "1.0.99"
backon = "1.5.2"
figment = { version = "0.10.19", features = ["env", "test", "toml"] }
log = "0.4.28"
rand = "0.9.2"
simple_logger = "5.0.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
